# Ph

avoidance/launch/: avoidance_sitl_mavros.launch  avoidance_sitl_stereo.launch
parallel_planner/: CMakeLists.txt  package.xml
parallel_planner/launch/: multi_uav_combined_method.launch
parallel_planner/rviz/: multi_uav.rviz
parallel_planner/src/: dsm_node.py  kalman_filter_node.py  parallel_planner_node.py  vfh_node.py
