<?xml version="1.0"?>
<package format="2">
  <name>parallel_planner</name>
  <version>0.0.1</version>
  <description>Combined method planner for multiple UAVs.</description>
  <maintainer email="user@example.com">AutoGen</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>tf2_ros</depend>
  <depend>pcl_ros</depend>
</package>
